--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,7 @@ section{
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(./images/bg.jpeg);
+    background-image: url(./images/bg.png);
     background-size: cover;
     background-position: center;
 }
